# TianWen

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
configs/dataset/: coco.yaml
configs/detector/: grounding_dino.yaml  rf_detr.yaml  rtdetr.yaml  yolov8.yaml
configs/experiment/: gdino_vlm_cascade.yaml  rfdetr_internvl_distill.yaml  yolov8_qwen_distill.yaml
configs/fusion/: decision_fusion.yaml  distillation.yaml  feature_fusion.yaml
configs/vlm/: internvl.yaml  qwen_vl.yaml
tests/: __init__.py  test_performance_improvements.py  test_registry.py  test_research_utils.py
tianwen/: __init__.py
tianwen/core/: __init__.py  config.py  registry.py
tianwen/datasets/: __init__.py  base.py  coco.py  transforms.py
tianwen/detectors/: __init__.py  base.py  grounding_dino.py  rf_detr.py  rtdetr.py  yolo.py
tianwen/engine/: __init__.py  callbacks.py  lightning_module.py  losses.py
tianwen/fusions/: __init__.py  base.py  decision_fusion.py  distillation.py  feature_fusion.py
tianwen/utils/: __init__.py  analysis.py  experiment.py  hyperparameter.py  metrics.py  visualization.py
tianwen/vlms/: __init__.py  base.py  internvl.py  qwen_vl.py
tools/: benchmark.py  coco_benchmark.py  coco_benchmark_real_vlm.py  coco_benchmark_tianwen_fusion.py  compare_detector_vlm.py  demo.py  eval.py  evaluate_distilled_model.py  generate_vlm_soft_labels.py  generate_vlm_soft_labels_v2.py  research.py  run_distillation_pipeline.py  train.py  train_distillation.py  train_vlm_distillation.py  visualize_comparison.py
tools/experiments/: __init__.py  coco_benchmark.py  coco_benchmark_real_vlm.py  coco_benchmark_tianwen_fusion.py  compare_detector_vlm.py  evaluate_distilled_model.py  generate_vlm_soft_labels.py  generate_vlm_soft_labels_v2.py  quick_benchmark.py  run_distillation_pipeline.py  train_distillation.py  train_vlm_distillation.py  visualize_comparison.py
